fixed background glitching

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
     <link href="./index.css" rel="stylesheet">
     <script src="scripts.js"></script>
   </head>
-  <body class=" bg-carArches bg-fixed bg-cover bg-center overscroll-none overflow-none font-sans">
+  <body class=" bg-fixed bg-center overscroll-none overflow-none font-sans">
     <h1 class="z-10 absolute top-1/2">test</h1>
-    <div class="h-5">
+    <div class = "overflow-hidden ">
+      <img src="images/fountain.jpg" class="fixed -ml-[screen] h-screen w-full aspect-video -z-10 object-cover ">
+    </div>
       <div class = "overflow-hidden ">
         <img src="images/alpha.png" class="fixed -ml-[screen] h-screen w-full aspect-video z-20 object-cover ">
       </div>
-    </div>
       <div class="float-left text-black opacity-100 inline-block z-10 absolute top-4 left-2 w-1/2 ">
           <h1 class="inline-block z-10 text-2xl sm:text-3xl md:text-4xl font-mulish max-w-[1/2] md:hidden ">TOMMIE MOTORSPORTS</h1>
       </div>
